--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-# SA
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>SA - Smart Attendance</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- CSS Styling -->
+    <style>
+        /* Global Styles */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+            background-color: #fff;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        /* Title Section */
+        .main-title {
+            font-size: 3rem;
+            font-weight: 700;
+            color: #1e1e2f;
+            margin-bottom: 10px;
+        }
+
+        .subtitle {
+            font-size: 1rem;
+            font-weight: 400;
+            color: #7a7a8c;
+            margin-bottom: 30px;
+        }
+
+        /* Login Button */
+        .login-btn {
+            font-size: 1rem;
+            font-weight: 600;
+            background-color: #4F46E5;
+            color: #fff;
+            padding: 12px 30px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .login-btn:hover {
+            background-color: #3730A3;
+            transform: translateY(-3px);
+        }
+
+        /* Footer */
+        .footer {
+            margin-top: 50px;
+            font-size: 0.8rem;
+            color: #aaa;
+        }
+    </style>
+</head>
+<body>
+    <!-- Title Section -->
+    <div class="main-title">Neutraa Attendance</div>
+    <div class="subtitle">Effortless Attendance Management</div>
+
+    <!-- Login Button -->
+    <button class="login-btn" onclick="window.location.href='welcome.html'">Login</button>
+
+    <!-- Footer -->
+    <div class="footer">&copy; 2025 Smart Attendance | All rights reserved.</div>
+</body>
+</html>
+
